<resources>
    <string name="app_name">PepaPig</string>
    <string name="homepage_welcome">Welcome! This is home page</string>
    <string name="homepage_fragment">Homepage</string>
    <string name="home_dia_title">Attention</string>
    <string name="homepage_dia_info">This app is only for test Android components, not for functions</string>
    <string name="home_dia_ok">Got it</string>
    <string name="home_dia_title2">Thank you</string>
    <string name="home_dia_body">This is my first release app, thank you very much for your support !</string>
    <string name="home_dia_toast">Enjoy and explore it !</string>
    <string name="calculator_fragment">Calculator</string>
    <string name="toast_calculator1">I think I don\'t want to receive an empty email :-(</string>
    <string name="top_share">Share</string>
    <string name="top_like">Like</string>
    <string name="top_menu_about">About</string>
    <string name="top_toast_like">Thank you !</string>
    <string name="top_toast_share">Who do you want to share ?</string>
    <string name="top_toast_like2">You already like it ! But still thank you !</string>
    <string name="dialog_title">Congratulations !</string>
    <string name="dialog_msg">This is an easter egg.</string>
    <string name="dialog_positive" translatable="false">YEAH !</string>
    <string name="button_desc" translatable="false">User icon button</string>
    <string name="toast_dialog">Good job bro !</string>
    <string name="menu_home">Home</string>
    <string name="side_group_1">General</string>
    <string name="side_group_2">Others</string>
    <string name="side_user">User</string>
    <string name="side_article">Article</string>
    <string name="side_about">About</string>
    <string name="side_settings">Settings</string>
    <string name="side_header_username" translatable="false">Pepa pig</string>
    <string name="side_header_email" translatable="false">demo@test.com</string>
    <string name="bottom_map">Map</string>
    <string name="bottom_login">Login</string>
    <string name="map_reset">Relocate</string>
    <string name="map_normal">Normal map</string>
    <string name="map_satellite">Satellite map</string>
    <string name="map_error1">Server error, please check</string>
    <string name="map_error2">Network error, please check</string>
    <string name="map_error3">The phone mode is wrong, please check whether the airplane mode is turned on</string>
    <string name="map_snackbar1">NB: This page is just for testing Baidu map API </string>
    <string name="map_snack_toast">Maybe I will use Google Map in the future</string>
    <string name="article_title">Demo article</string>
    <string name="article_back_top">Back top</string>
    <string name="next_page">Next page</string>
    <string name="text_head" translatable="false">"Does not have translation !! \n" "没有中文翻译 ！！"</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"

        "\n\n"
    </string>
    <string name="about_my_email" translatable="false">1063128177@qq.com</string>
    <string name="about_git_link" translatable="false">https://github.com/JerryFhuurr/PepaPig.git</string>
    <string name="about_link_desc">Remember to select URL tag when you cloning the codes</string>
    <string name="about_info_fab">Try to click it !</string>
    <string name="about_fab" translatable="false">FAB</string>
    <string name="about_snack1">Is it fun ?</string>
    <string name="about_snack2">FUN !</string>
    <string name="about_snack_toast">I made an easter egg somewhere, can you find it ??</string>
    <string name="about_send_email">Oh, you want to send me an email :-) ?</string>
    <string name="about_git_toast">Link copied to clipboard</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_calculator">Calculator</string>
    <string name="first_fragment_label">Simple calculator</string>
    <string name="second_fragment_label">Writing page</string>
    <string name="next">Write !</string>
    <string name="next2">History</string>
    <string name="previous">Back</string>
    <string name="calculator_error_toast">Please enter correct expression !</string>
    <string name="calculator_second_info" translatable="false">Will add history function in the future</string>
    <string name="calculator_second_info2" translatable="false">Try to type something into the field, it will show up on the result view in calculator :</string>
    <string name="calculator_send_btn">Send</string>
    <string name="calculator_second_info3">
        "Also, you can write something below and send it to me. \n"
        "Of course, send it through email  XD"
        "\n\n"
    </string>
    <string name="edit_hint">Don\'t write too much !</string>
    <string name="edit_warning">Not working !</string>
    <string name="toast_sent">Text send !</string>
    <string name="cal_second_label">History</string>
    <string name="cal_history_toast">Expression copied !</string>
    <string name="s_group1_title">Language</string>
    <string name="s_language_change">Change language</string>
    <string name="s_button_language_change">Change</string>
    <string name="s_language_text_cn">CN</string>
    <string name="s_language_text_en">EN</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_dialog_header">Warning</string>
    <string name="login_dialog_body">This view doesn\'t have any functions of logging !</string>
    <string name="image_desc" translatable="false">User icon</string>
</resources>