<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/nav_group1">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_iconmonstr_home_7"
            android:title="@string/menu_home" />
    </group>

    <item android:title="@string/side_group_1">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_iconmonstr_login"
                    android:title="@string/bottom_login" />
                <item
                    android:id="@+id/nav_article"
                    android:icon="@drawable/ic_iconmonstr_file_2"
                    android:title="@string/side_article" />
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_iconmonstr_gear_2"
                    android:title="@string/side_settings" />
            </group>
        </menu>
    </item>

    <item android:title="@string/side_group_2">
        <menu>
            <group android:id="@+id/nav_group3">
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_iconmonstr_warning_2"
                    android:title="@string/side_about" />
                <item
                    android:id="@+id/nav_calculator"
                    android:icon="@drawable/ic_iconmonstr_calculator_5"
                    android:title="@string/calculator_fragment" />
            </group>
        </menu>
    </item>
</menu>