<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/s_group1_title"
            android:textSize="45dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="15dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/s_language_change"
                android:gravity="center|left"
                android:layout_weight="1"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/language_tag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/s_language_text_en"
                android:layout_weight="1.8"
                android:textSize="20dp" />

            <Button
                android:id="@+id/s_change_language"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="calculator_change_language"
                android:text="@string/s_button_language_change"
                android:layout_weight="1.2"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>