<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Article">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/MistyRose">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_head"
                android:textSize="20sp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@android:color/holo_red_dark"
                app:layout_scrollFlags="scroll"/>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <TextView
                android:id="@+id/tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/large_text"
                android:textSize="15sp"/>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom">
            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1.85"/>
            <Button
                android:id="@+id/back_top_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_iconmonstr_arrow_up"
                android:drawableLeft="@drawable/ic_iconmonstr_arrow_up"
                android:text="@string/article_back_top" />
            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1.8"/>
            <Button
                android:id="@+id/switch_next_page_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/next_page" />
            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1.85"/>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</FrameLayout>